<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
<!--    <item-->
<!--        android:id="@+id/postCodeFragment"-->
<!--        android:icon="@drawable/ic_shopping_cart"-->
<!--        android:title="Cart" />-->

    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/ic_shopping_cart"
        android:title="Cart" />

    <item
        android:id="@+id/bookingServicesFragment"
        android:icon="@drawable/ic_booking"
        android:title="@string/booking" />
    <item
        android:id="@+id/offersFragment"
        android:icon="@drawable/ic_discount"
        android:title="@string/offers" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_user_profile"
        android:title="@string/profile" />

</menu>