<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".loginRegister.fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/space150"
                android:layout_height="@dimen/space150"
                android:src="@drawable/logo"
                android:scaleType="centerCrop"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cv_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/space8"
                    android:layout_margin="@dimen/space15">

                    <LinearLayout
                        android:layout_marginTop="@dimen/space5"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="@dimen/space5"
                        android:layout_marginBottom="@dimen/space40"
                        android:padding="@dimen/space15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/et_email"
                            android:padding="@dimen/space10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_email"
                            android:drawableLeft="@drawable/ic_user"
                            android:drawablePadding="@dimen/space10"
                            android:drawableTint="@color/appColor"
                            android:inputType="textEmailAddress"
                            android:background="@android:color/transparent" />

                        <View
                            android:layout_marginTop="@dimen/space10"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/space1"
                            android:background="@android:color/darker_gray" />

                        <EditText
                            android:id="@+id/et_password"
                            android:layout_marginTop="@dimen/space10"
                            android:padding="@dimen/space10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_password"
                            android:drawableRight="@drawable/ic_eye"
                            android:drawableLeft="@drawable/ic_password"
                            android:drawablePadding="@dimen/space10"
                            android:drawableTint="@color/appColor"
                            android:inputType="textPassword"
                            android:background="@android:color/transparent" />


                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <Button
                    android:id="@+id/btn_login"
                    android:elevation="@dimen/space2"
                    android:layout_marginTop="-42dp"
                    android:layout_below="@id/cv_main"
                    android:layout_marginRight="@dimen/space50"
                    android:layout_marginLeft="@dimen/space50"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_bg"
                    android:text="Login"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_below="@id/btn_login"
                    android:id="@+id/tv_skip"
                    android:layout_margin="@dimen/space5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Skip"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:textColor="@color/appColor"
                    android:padding="@dimen/space10"
                    android:layout_centerHorizontal="true"/>


            </RelativeLayout>

            <TextView
                android:id="@+id/tv_forgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_pass"
                android:padding="@dimen/space10"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_marginLeft="@dimen/space15"
                android:layout_marginRight="@dimen/space15"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".15"
                android:gravity="center">

                <View
                    android:layout_width="@dimen/space100"
                    android:layout_height="@dimen/space1"
                    android:layout_marginRight="@dimen/space10"
                    android:background="@android:color/darker_gray"
                    />

                <TextView
                    android:id="@+id/or_login_with"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/or_login_with"
                    android:textSize="@dimen/text14" />

                <View
                    android:layout_width="@dimen/space100"
                    android:layout_height="@dimen/space1"
                    android:layout_marginLeft="@dimen/space10"
                    android:background="@android:color/darker_gray"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".2"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/space28"
                    app:cardElevation="@dimen/space5">

                    <ImageView
                        android:id="@+id/facebookBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        android:padding="@dimen/space4"
                        android:src="@drawable/ic_facebook" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space20"
                    app:cardCornerRadius="@dimen/space28"
                    app:cardElevation="@dimen/space5">

                    <ImageView
                        android:id="@+id/googleBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/space4"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_google_plus" />

                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".1"
                android:gravity="center">

                <TextView
                    android:id="@+id/dont_have_an_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_an_account"/>

                <TextView
                    android:id="@+id/noAcRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/space3"
                    android:textColor="@color/appColor"
                    android:text="@string/register"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>